--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-native-elements": "^0.18.5"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
